2002-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubLib.c (Tcl_InitStubs): prevent the cached check of
	tclStubsPtr to allow for repeated load/unload of the Tcl dll by
	hosting apps. [Bug 615304]

2002-12-03  David Gravereaux  <davygrvy@pobox.com>

	* win/tclAppInit.c (sigHandler):  Protect from trying to close a
	NULL handle.

	* win/tclWinPipe.c (PipeClose2Proc, TclpCreateProcess):  Send a
	real Win32 signal (CTRL_C_EVENT) when the read channel is brought
	down to alert the child to close on its side.  Start the process
	with CREATE_NEW_PROCESS_GROUP to allow the ability to send these
	signals.  The following test case now brings down the child
	without the use of an external [kill] command.

	% set p [open "|[info name]" w+]
	file8d5380
	% pid $p
	2876
	% close $p     <- now doesn't block in Tcl_WaitPid()
	%

	* win/tclWinPipe.c (PipeClose2Proc):  Changed CTRL_C_EVENT
	to CTRL_BREAK_EVENT as it can't be ignored by the child and
	proved to work on [open "|netstat 1" w+] where CTRL_C_EVENT
	didn't.

2002-11-27  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPort.h:  Don't turn off winsock prototypes!
	TclX didn't like it.  Even though the core doesn't use the
	prototypes, do offer them.

	* win/tclWinSock.c:  Removed shutdown() from the function
	table as it wasn't referenced anywhere and cleaned-up some
	casting that that wasn't needed.

	* win/tclWinSock.c:  WSAStartup() loaded version comparison
	error which resulted in 2.0 looking less than 1.1.

	* win/tclWinChan.c (Tcl_MakeFileChannel):  return of
	DuplicateHandle() incorrectly used [Bug 618852].

2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEncoding.c (TclFinalizeEncodingSubsystem): properly
	cleanup all encodings by using Tcl_FirstHashEntry in the while loop.

	* unix/Makefile.in (valgrind): add simple valgrind target

	* tests/exec.test: unset path var to allow singleproc testing

	* generic/tclInterp.c (AliasCreate): preserve/release interps to